--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "bulma": "0.7.5",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-redux": "7.1.1",
-    "react-scripts": "3.0.1",
-    "redux-saga": "1.0.5"
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.25",
+    "@types/react": "17.0.1",
+    "@types/react-dom": "17.0.0",
+    "bulma": "0.9.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "react-scripts": "4.0.2",
+    "redux-saga": "1.1.3",
+    "typescript": "4.1.5"
   },
   "devDependencies": {
     "typescript": "3.3.3"
