--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "0.9.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-query": "3.8.2",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
