--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "14.14.25",
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "bulma": "0.9.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -17,6 +18,7 @@
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
     "redux-saga": "1.1.3",
     "typescript": "4.1.5"
   },
@@ -31,5 +33,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.32.7"
+  }
 }
