--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "2.13.8",
     "redux-saga": "1.1.3",
     "typescript": "4.1.5"
   },
