--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "bulma": "0.9.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -21,7 +22,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-saga": "1.1.3",
-    "typescript": "4.1.5"
+    "typescript": "4.1.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
