--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
-    "@types/jest": "26.0.20",
+    "@types/jest": "^26.0.20",
     "@types/node": "14.14.25",
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
@@ -38,8 +38,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.16",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
     "@types/react-redux": "^7.1.16",
-    "redux-devtools-extension": "^2.13.8",
-    "sass": "^1.32.7"
+    "cross-env": "^7.0.3",
+    "msw": "^0.26.2",
+    "sass": "^1.32.7",
+    "ts-node": "^9.1.1"
   }
 }
