--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
+    "@rtk-incubator/rtk-query": "^0.2.0",
     "@types/jest": "^26.0.20",
     "@types/node": "14.14.25",
     "@types/react": "17.0.1",
